--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
               When Yves Cyubahiro started doing his internalship a Younglings, We knew that we made the right decision by bringin him in our company. His a hard worker and likes to work in Team and a good leader. He has set a good exaple here a younglings.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/Russel.png" class="testimonial-img" alt="">
             <h3>John Larson</h3>
             <h4>Entrepreneur</h4>
           </div>
